fix: align dates

--- a/public/styles/posts.css
+++ b/public/styles/posts.css
@@ -80,7 +80,7 @@ article h3,
   position: relative;
   display: flex;
   justify-content: space-between;
-  align-items: baseline;
+  align-items: center;
 }
 
 article h1,
